Bug 157442 - Redlining of a misspelled word disappears when you write an erroneous word with a number after it
Summary: Redlining of a misspelled word disappears when you write an erroneous word wi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking
  Show dependency treegraph
 
Reported: 2023-09-25 16:12 UTC by Vladislav Tarakanov
Modified: 2023-10-17 19:31 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example (7.46 KB, image/png)
2023-09-25 16:19 UTC, Vladislav Tarakanov
Details
Test in dev version (897.21 KB, video/mp4)
2023-09-25 23:46 UTC, Vladislav Tarakanov
Details
test on windows 10 (803.83 KB, video/mp4)
2023-09-26 08:31 UTC, Amin Irgaliev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladislav Tarakanov 2023-09-25 16:12:58 UTC
Description:
Words with an error are not underlined with a red line and successfully pass the test in "tools -> spelling..." if they are followed by a digit or a word with a digit, the part of which before the first digit is also a misspelled word (in this case, both words are not underlined ). After saving and reopening the file, the problem still remains.

Steps to Reproduce:
1. Open Writer
2. Write a misspelled word, press space
3. Write a number or misspelled word ending with a number

Actual Results:
Misspelled words are not recognized

Expected Results:
At least the first word is recognized as misspelled


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: 9366f83c88fc93d40ea0c0035508f24ad5dcb144
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Vladislav Tarakanov 2023-09-25 16:19:13 UTC
Created attachment 189811 [details]
Example
Comment 2 Vladislav Tarakanov 2023-09-25 16:22:46 UTC
Also reproduced in windows. Libreoffice version 7.6.1
Comment 3 raal 2023-09-25 16:56:21 UTC
Hello,
set Tools> Spelling > Options > Check words with numbers.
Comment 4 Vladislav Tarakanov 2023-09-25 17:16:39 UTC
Yes, this does indeed fix the problem. But I don’t understand why, without this setting, the word preceding the word with a number is not recognized as a misspelled in some cases.

For example, the combination "ErrorError tree2" recognizes "ErrorError" as a misspelled word, but the combination "ErrorError treee2" no longer recognizes.
Comment 5 Vladislav Tarakanov 2023-09-25 17:26:02 UTC
Check in
Version: 7.5.6.2 (X86_64) / LibreOffice Community
Build ID: f654817fb68d6d4600d7d2f6b647e47729f55f15
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: CL threaded

In this version, the next word has no effect on the previous one, even if "Tools > Spelling > Options > Check words with numbers" is not enabled
Comment 6 raal 2023-09-25 21:25:17 UTC
(In reply to Vladislav Tarakanov from comment #4)
> Yes, this does indeed fix the problem. But I don’t understand why, without
> this setting, the word preceding the word with a number is not recognized as
> a misspelled in some cases.
> 
> For example, the combination "ErrorError tree2" recognizes "ErrorError" as a
> misspelled word, but the combination "ErrorError treee2" no longer
> recognizes.

Please can you test in dev version? I cannot reproduce it in Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 7 Vladislav Tarakanov 2023-09-25 23:46:59 UTC
Created attachment 189815 [details]
Test in dev version
Comment 8 QA Administrators 2023-09-26 03:14:41 UTC Comment hidden (obsolete)
Comment 9 Amin Irgaliev 2023-09-26 08:31:40 UTC
Created attachment 189825 [details]
test on windows 10

Confirmed for Windows 10. This bug not always is reproduced.
Comment 10 Buovjaga 2023-10-10 10:46:22 UTC
Bibisected with linux-64-7.6 to 5619fc438273cd15e78539e78b8af751bca24b1a
tdf#154499 sw spell checking: add 2-word phrase checking

Tested with

ErrorError treee2
Comment 11 Commit Notification 2023-10-11 07:00:54 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a822df6379606ab9f62d6ebb2318d0294d9c959c

tdf#157442 sw: fix spell checking of words next to digits

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 László Németh 2023-10-11 07:03:52 UTC
Vladislav: Nice catch! Many thanks for the report!

Buovjaga: Many thanks for the bibisect!

All: many thanks for the QA!

Started to back-port to 7.6, too.
Comment 13 Commit Notification 2023-10-11 08:53:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f3c084853331a9552821c369349398f964c73ab6

tdf#157442 sw: fix spell checking of words next to digits

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-10-17 19:31:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4be9bd0595cec36b6a22ca12b48661e080a5a1d8

tdf#157442: sw_uiwriter6: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.