tdf#157442 sw: fix spell checking of words next to digits

If the preceding or subsequent word was a number or a word with
numbers, misspelled words were accepted as correct.

Note: it occurred with disabled "Check words with numbers"
(default setting in Options – Language Settings – Writing Aids).

Regression from commit 5619fc438273cd15e78539e78b8af751bca24b1a
"tdf#154499 sw spell checking: add 2-word phrase checking".

Change-Id: I4478c89d04ebf971925d4bdd56aaebc7ce8fb77e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157799
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4df899de2ac51e684e83ab95dd25fc752ce2e92e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157775
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>